# S.E.A.M.

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.pt-br.md  TUTORIAL.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ActionConfigModal.module.css  ActionConfigModal.tsx  AppSelectorModal.module.css  AppSelectorModal.tsx  ThemeToggle.module.css
frontend/src/layouts/: AuthLayout.module.css  AuthLayout.tsx  DashboardLayout.module.css  DashboardLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: CreateWorkflow.module.css  CreateWorkflow.tsx  Dashboard.module.css  Dashboard.tsx  ExecutionLogs.module.css  Login.tsx  Profile.module.css  Profile.tsx  Register.tsx  Settings.tsx  WorkflowDetail.module.css  WorkflowDetail.tsx  Workflows.module.css  Workflows.tsx
frontend/src/store/: auth.ts
frontend/src/styles/: globals.css
src/apps/accounts/: api.py  auth.py  models.py  schemas.py
src/apps/accounts/migrations/: 0003_user_avatar.py
src/apps/engine/: __init__.py  apps.py  renderer.py  tasks.py
src/apps/engine/management/commands/: seed_demo.py
src/apps/observability/: api.py  schemas.py
src/apps/workflows/: api.py  schemas.py
src/common/: middleware.py
src/config/: celery.py  urls.py
src/config/settings/: base.py  production.py
tests/integration/: test_timeseries.py
